fixing first line spacing

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h1 + p::first-line, h2 + p::first-line {
 	/*all small caps workaround*/
 	text-transform: lowercase;
 	font-variant: small-caps;
-	letter-spacing:.1em;
+	letter-spacing:.05em;
 	/* actual opentype all small caps code:
 	font-variant-caps: all-small-caps;
 	-moz-font-feature-settings: "smcp";
@@ -178,6 +178,7 @@ h2 {
 
 h2 > .header-section-number {
 	display: block;
+	font-weight: 400;
 	padding-right: 0em;
 	margin-top: 2em;
 	letter-spacing: .2px;
